--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Monstr</title>
-    <!-- <script src='js/index.js'></script> -->
-    <script src='js/demo.js'></script>
+   
+    <!-- <script src='js/demo.js'></script> -->
   </head>
   <body>
     <h1>Monstr Inc.</h1>
-    <div id='create-monster'></div>
+    <div id='create-monster'>
+      <form>
+        <input id="name" type="text" name="create" placeholder="name"> 
+        <input id="age" type="number" name="age" placeholder="age">
+        <input id="desc" type="text" name="desc" placeholder="description">
+        <input id="submit" type="submit" value="Create a Monster">
+      </input>
+   </div>
     <div id='monster-container'></div>
     <button id="back"><=</button>
-    <button id="forward">=></button>
+    <button id="forward">=></button> 
+    
   </body>
+  <script src='js/index.js'></script>
 </html>
